Rapid Prd/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Assigned_to_team__c</fullName>
        <formula>TEXT(Owner:User.Team_Name__c)</formula>
        <label>Assigned to team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Issue__c</fullName>
        <label>CS Issue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pay Off Check Fed Ex Label Created</fullName>
                </value>
                <value>
                    <fullName>Retention</fullName>
                </value>
                <value>
                    <fullName>Lockbox Detail Explanation</fullName>
                </value>
                <value>
                    <fullName>Bank Information Updated or Changed</fullName>
                </value>
                <value>
                    <fullName>Change CC Processors</fullName>
                </value>
                <value>
                    <fullName>Update On File</fullName>
                </value>
                <value>
                    <fullName>Request Balance</fullName>
                </value>
                <value>
                    <fullName>Request Statements</fullName>
                </value>
                <value>
                    <fullName>Inquired on Refund Status</fullName>
                </value>
                <value>
                    <fullName>Request Login Information for RA</fullName>
                </value>
                <value>
                    <fullName>Request Login Information for Lockbox</fullName>
                </value>
                <value>
                    <fullName>Request Split Increase/Decrease for RA</fullName>
                </value>
                <value>
                    <fullName>Split Increase/Decrease for RA</fullName>
                </value>
                <value>
                    <fullName>Risk</fullName>
                </value>
                <value>
                    <fullName>Updated Address</fullName>
                </value>
                <value>
                    <fullName>Updated Contact Information</fullName>
                </value>
                <value>
                    <fullName>Problems with RapidAdvance Website</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Multiple Caller Same Issue</fullName>
                </value>
                <value>
                    <fullName>Transfer to AE</fullName>
                </value>
                <value>
                    <fullName>No Call Back from AE</fullName>
                </value>
                <value>
                    <fullName>Paid Off Account GCS Account Update</fullName>
                </value>
                <value>
                    <fullName>LL Call Back</fullName>
                </value>
                <value>
                    <fullName>Conference Call with Merchant and CC Processor</fullName>
                </value>
                <value>
                    <fullName>Commission Inquiry</fullName>
                </value>
                <value>
                    <fullName>ACH problem/question</fullName>
                </value>
                <value>
                    <fullName>Address change</fullName>
                </value>
                <value>
                    <fullName>Bank information change</fullName>
                </value>
                <value>
                    <fullName>Change credit card Processors</fullName>
                </value>
                <value>
                    <fullName>Double dipping</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Duration_minutes__c</fullName>
        <formula>CallDurationInSeconds /60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Duration (minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Congratulate_client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Congratulate client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <label>Event Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Five9_Call_Recording__c</fullName>
        <formula>IF(NOT(ISBLANK(Five9__Five9SessionId__c ) ), &quot;http://callrecord/&quot; &amp; 
TEXT(YEAR( DATEVALUE( CreatedDate ) )) &amp; 
&quot;_&quot; &amp; 
LPAD(TEXT(MONTH(DATEVALUE( CreatedDate ) )), 2 , &quot;0&quot;) &amp; 
&quot;_&quot; &amp; 
LPAD(TEXT ( DAY(DATEVALUE( CreatedDate ) )), 2 , &quot;0&quot;) &amp; 
&quot;/&quot; &amp; Five9__Five9SessionId__c &amp; &quot;.wav&quot; , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Five9 Call Recording</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9_Start_Time__c</fullName>
        <description>Time Five9 call started</description>
        <formula>CreatedDate-
(((VALUE(LEFT(Five9__Five9HandleTime__c, 2)) * 3600)
+ (VALUE(MID(Five9__Five9HandleTime__c, 4, 2)) * 60)
+ (VALUE(RIGHT(Five9__Five9HandleTime__c, 2)))) / 86400)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Five9 Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Five9__Five9ANI__c</fullName>
        <label>Five9 ANI</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9AgentExtension__c</fullName>
        <label>Five9 Agent Extension</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9AgentName__c</fullName>
        <label>Five9 Agent Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9Agent__c</fullName>
        <label>Five9 Agent</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9CallType__c</fullName>
        <label>Five9 Call Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9CallbackCampaignId__c</fullName>
        <label>Five9CallbackCampaignId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9CallbackCampaignName__c</fullName>
        <label>Five9CallbackCampaignName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9CallbackId__c</fullName>
        <label>Five9CallbackId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9CallbackNumber__c</fullName>
        <label>Five9CallbackNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Five9__Five9Campaign__c</fullName>
        <label>Five9 Campaign</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9Cost__c</fullName>
        <label>Five9 Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Five9__Five9DNIS__c</fullName>
        <label>Five9 DNIS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9HandleTime__c</fullName>
        <label>Five9 Handle Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9SessionId__c</fullName>
        <label>Five9 Session Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9TalkAndHoldTimeInSeconds__c</fullName>
        <label>Five9 Talk and Hold Duration</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Five9__Five9WrapTime__c</fullName>
        <label>Five9 After Call Work Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Foreshadow_renewals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Foreshadow renewals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Foreshadow_what_happens_next__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Foreshadow what happens next</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LD_NumId__c</fullName>
        <description>Numeric Id to enhance indexing and data chunking during backups and integration with external systems. This is a Foreign Key for Leads.</description>
        <inlineHelpText>Numeric Id to enhance indexing and data chunking during backups and integration with external systems. This is a Foreign Key for Leads.</inlineHelpText>
        <label>LD NumId</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Company_Name__c</fullName>
        <description>Merchant company name typed into the webform for ET</description>
        <label>Merchant Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Email_Address__c</fullName>
        <description>email address entered into the webform for ET</description>
        <label>Merchant Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Merchant_Name__c</fullName>
        <description>merchants name entered into a web form for ET</description>
        <label>Merchant Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Phone_Number__c</fullName>
        <description>phone number of merchant entered into the webform for ET</description>
        <label>Merchant Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Name_text__c</fullName>
        <label>Name text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OP_NumId__c</fullName>
        <description>Numeric Id to enhance indexing and data chunking during backups and integration with external systems. This is a Foreign Key for Opportunities.</description>
        <inlineHelpText>Numeric Id to enhance indexing and data chunking during backups and integration with external systems. This is a Foreign Key for Opportunities.</inlineHelpText>
        <label>OP NumId</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <formula>IF( BEGINS( WhatId , &quot;006&quot;) , &quot;Opportunity&quot;, 
IF( BEGINS( WhatId , &quot;001&quot;) , &quot;Account&quot;, 
IF( BEGINS( WhoId , &quot;00Q&quot;) , &quot;Lead&quot;, 
IF( BEGINS( WhoId , &quot;003&quot;) , &quot;Contact&quot;,&quot;&quot;))))</formula>
        <label>Object Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pitch_referrals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pitch referrals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QC_Person__c</fullName>
        <label>QC Person</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cathrine</fullName>
                </value>
                <value>
                    <fullName>Ted</fullName>
                </value>
                <value>
                    <fullName>Yolanda</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_to_text__c</fullName>
        <label>Related to text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Surveys_testimonials__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Surveys/testimonials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TK_NumId__c</fullName>
        <description>Numeric Id to enhance indexing and data chunking during backups and integration with external systems.</description>
        <displayFormat>{000000000}</displayFormat>
        <inlineHelpText>Numeric Id to enhance indexing and data chunking during backups and integration with external systems.</inlineHelpText>
        <label>TK NumId</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>isConversation__c</fullName>
        <formula>IF(CallDurationInSeconds  &gt;=  90,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isConversation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__pardot_source_id__c</fullName>
        <description>Identifies the Pardot record that caused this activity to be created.</description>
        <externalId>true</externalId>
        <label>Pardot Source Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sma__BaseObjectId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MapAnything Base Object</label>
        <referenceTo>sma__MABaseObject__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>BaseObjectIds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sma__LayerId__c</fullName>
        <label>Layer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>